Made changes to paths and added documentation to swagger
